refactor: update all files and add passport.config.js
